	  - add a few more comments
	  - no need to check for libxml2 twice  (more work to do here).

	* src/backend/file/test/Makefile.am:
	* src/backend/file/Makefile.am:
	* src/business/business-core/file/Makefile.am:
	* src/gnome-utils/Makefile.am:
	* lib/libgsf-1.12.3/tests/Makefile.am:
	* configure.in:
	  combine XML_{CFLAGS,LIBS} into LIBXML2_{CLFLAGS,LIBS}

2006-02-15  Joshua Sled  <jsled@asynchronous.org>

	* src/backend/file/test/test-load-xml2.c (main): Initialize
	g_types before we can expect gconf (via the gnc file backend) to
	work, as per the gconf API docs.

	* src/gnome/dialog-hierarchy.c:
	* src/gnome/glade/account.glade: Andreas Köhler's patch to not
	scroll the tree view headers in the new-account hierarchy druid.
	Bug#330850.

2006-02-15  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/business-core.scm: 
	  Fix a typo; forgot one procedure name-change instance.

	* lib/libqof/qof/Makefile.am: keep qofla-dir.h out of the dist
	* configure.in: look in builddir for qof includes.

	* src/business/business-reports/owner-report.scm:
	  set the document title properly.

2006-02-14  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/advanced-portfolio.scm:
	Andrew Sackville-West's patch to add display options and fix
	the multicurrency patch.  Fixes #314554 and #330577.

2006-02-14  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/schemas/*.schemas.in: Make the gconf key wordings
	consistent across all of our schemas files, as discussed and
	prepared on http://wiki.gnucash.org/wiki/GConf_Wording .

	* src/import-export/hbci/gnc-hbci-utils.c: For latest aqbanking
	changes, define AQBANKING_NOWARN_DEPRECATED to disable aqbanking
	compiler warnings because we will still use those functions for
	some time to come.

2006-02-13  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c:
	* src/gnome/glade/account.glade: Andreas Köhler's patch to convert
	the account types list in the account edit dialog to a