@@ -7,6 +7,7 @@
 
 #include <stdio.h>
 #include <glib.h>
+#include <glib-gobject.h>
 
 #include "gnc-module.h"
 #include "gnc-module-api.h"
@@ -45,6 +46,10 @@ libgncmod_backend_file_LTX_gnc_module_init(int refcount)
 {  
   engine = gnc_module_load("gnucash/engine", 0);
   if(!engine) return FALSE;
+
+  /* Need to initialize g-type engine for gconf */
+  if (refcount == 0)
+    g_type_init();
 
   return TRUE;
 }
