@@ -34,7 +34,6 @@
 #include <dirent.h>
 #include <string.h>
 #include <glib.h>
-#include <glib-object.h>
 
 #include "cashobjects.h"
 #include "Group.h"
@@ -108,8 +107,6 @@ main (int argc, char ** argv)
 {
     const char *location = getenv("GNC_TEST_FILES");
     DIR *xml2_dir;
-
-    g_type_init();
 
     qof_init();
     cashobjects_register();
